--- a/taverna-workbench-product/pom.xml
+++ b/taverna-workbench-product/pom.xml
@@ -36,15 +36,17 @@
 		</dependency>
 
 		<!-- Java Extension Implementations -->
-		<!-- <dependency>
-			<groupId>com.sun.xml</groupId>
-			<artifactId>com.springsource.com.sun.xml.bind</artifactId>
-			<version>2.2.0</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>com.sun.xml</groupId> <artifactId>com.springsource.com.sun.xml.bind</artifactId>
+			<version>2.2.0</version> </dependency> -->
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>com.springsource.javax.xml.bind</artifactId>
 			<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>com.springsource.javax.activation</artifactId>
+			<version>1.1.1</version>
 		</dependency>
 		<dependency> <!-- required by bsh -->
 			<groupId>javax.servlet</groupId>
@@ -90,17 +92,9 @@
 		</dependency>
 
 		<!-- Taverna Activities -->
-		<!-- <dependency>
-			<groupId>net.sf.taverna.t2.activities</groupId>
-			<artifactId>all-activities</artifactId>
-			<version>${t2.activities.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.activities</groupId>
-					<artifactId>biomoby-activity</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency> -->
+		<!-- <dependency> <groupId>net.sf.taverna.t2.activities</groupId> <artifactId>all-activities</artifactId>
+			<version>${t2.activities.version}</version> <exclusions> <exclusion> <groupId>net.sf.taverna.t2.activities</groupId>
+			<artifactId>biomoby-activity</artifactId> </exclusion> </exclusions> </dependency> -->
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>beanshell-activity</artifactId>
@@ -118,17 +112,9 @@
 		</dependency>
 
 		<!-- Taverna Activities UI -->
-		<!-- <dependency>
-			<groupId>net.sf.taverna.t2.ui-activities</groupId>
-			<artifactId>all-activity-uis</artifactId>
-			<version>${t2.activities.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.activities</groupId>
-					<artifactId>biomoby-activity-ui</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency> -->
+		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-activities</groupId> <artifactId>all-activity-uis</artifactId>
+			<version>${t2.activities.version}</version> <exclusions> <exclusion> <groupId>net.sf.taverna.t2.activities</groupId>
+			<artifactId>biomoby-activity-ui</artifactId> </exclusion> </exclusions> </dependency> -->
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>beanshell-activity-ui</artifactId>
