--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,171 @@
 	<groupId>uk.org.taverna.workbench</groupId>
 	<artifactId>taverna-workbench-product</artifactId>
 	<name>Taverna Workbench Product</name>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
+	<profiles>
+		<profile>
+			<id>developer</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>buildnumber-maven-plugin</artifactId>
+						<version>1.0-beta-3</version>
+						<executions>
+							<execution>
+								<id>buildnumber-validate</id>
+								<phase>validate</phase>
+								<goals>
+									<goal>create</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<doCheck>false</doCheck>
+							<doUpdate>false</doUpdate>
+							<format>{0,date,yyyyMMdd}T{0,date,HHmm}
+							</format>
+							<items>
+								<item>timestamp</item>
+							</items>
+						</configuration>
+					</plugin>
+
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<version>2.3</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+
+						<configuration>
+							<descriptors>
+								<descriptor>src/main/assembly/developer-assembly.xml
+								</descriptor>
+							</descriptors>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+
+		</profile>
+		<profile>
+			<id>nightly</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>buildnumber-maven-plugin</artifactId>
+						<version>1.0-beta-3</version>
+						<executions>
+							<execution>
+								<id>buildnumber-validate</id>
+								<phase>validate</phase>
+								<goals>
+									<goal>create</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<doCheck>false</doCheck>
+							<doUpdate>false</doUpdate>
+							<format>{0,date,yyyyMMdd}
+							</format>
+							<items>
+								<item>timestamp</item>
+							</items>
+						</configuration>
+					</plugin>
+
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<version>2.3</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+
+						<configuration>
+							<descriptors>
+								<descriptor>src/main/assembly/nightly-assembly.xml
+								</descriptor>
+							</descriptors>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+
+		</profile>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>buildnumber-maven-plugin</artifactId>
+						<version>1.0-beta-3</version>
+						<executions>
+							<execution>
+								<id>buildnumber-validate</id>
+								<phase>validate</phase>
+								<goals>
+									<goal>create</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<doCheck>false</doCheck>
+							<doUpdate>false</doUpdate>
+							<format>{0,date,yyyyMMdd}
+							</format>
+							<items>
+								<item>timestamp</item>
+							</items>
+						</configuration>
+					</plugin>
+
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<version>2.3</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+
+						<configuration>
+							<descriptors>
+								<descriptor>src/main/assembly/release-assembly.xml
+								</descriptor>
+							</descriptors>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	<build>
+		<finalName>taverna-workbench-${project.version}</finalName>
+	</build>
+
 	<dependencies>
 		<!-- Spring DM -->
 		<dependency>
@@ -35,7 +199,7 @@
 		</dependency>
 
 		<!-- Java Extension Implementations -->
-		<!-- <dependency> <groupId>com.sun.xml</groupId> <artifactId>com.springsource.com.sun.xml.bind</artifactId>
+		<!-- <dependency> <groupId>com.sun.xml</groupId> <artifactId>com.springsource.com.sun.xml.bind</artifactId> 
 			<version>2.2.0</version> </dependency> -->
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
@@ -91,14 +255,11 @@
 		</dependency>
 
 		<!-- Taverna Activities -->
-		<!-- <dependency> <groupId>net.sf.taverna.t2.activities</groupId> <artifactId>all-activities</artifactId>
-			<version>${t2.activities.version}</version> <exclusions> <exclusion> <groupId>net.sf.taverna.t2.activities</groupId>
+		<!-- <dependency> <groupId>net.sf.taverna.t2.activities</groupId> <artifactId>all-activities</artifactId> 
+			<version>${t2.activities.version}</version> <exclusions> <exclusion> <groupId>net.sf.taverna.t2.activities</groupId> 
 			<artifactId>biomoby-activity</artifactId> </exclusion> </exclusions> </dependency> -->
-		<!-- <dependency>
-			<groupId>net.sf.taverna.t2.activities</groupId>
-			<artifactId>beanshell-activity</artifactId>
-			<version>${t2.activities.version}</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>net.sf.taverna.t2.activities</groupId> <artifactId>beanshell-activity</artifactId> 
+			<version>${t2.activities.version}</version> </dependency> -->
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>stringconstant-activity</artifactId>
@@ -106,14 +267,11 @@
 		</dependency>
 
 		<!-- Taverna Activities UI -->
-		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-activities</groupId> <artifactId>all-activity-uis</artifactId>
-			<version>${t2.activities.version}</version> <exclusions> <exclusion> <groupId>net.sf.taverna.t2.activities</groupId>
+		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-activities</groupId> <artifactId>all-activity-uis</artifactId> 
+			<version>${t2.activities.version}</version> <exclusions> <exclusion> <groupId>net.sf.taverna.t2.activities</groupId> 
 			<artifactId>biomoby-activity-ui</artifactId> </exclusion> </exclusions> </dependency> -->
-		<!-- <dependency>
-			<groupId>net.sf.taverna.t2.ui-activities</groupId>
-			<artifactId>beanshell-activity-ui</artifactId>
-			<version>${t2.ui.activities.version}</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-activities</groupId> <artifactId>beanshell-activity-ui</artifactId> 
+			<version>${t2.ui.activities.version}</version> </dependency> -->
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>stringconstant-activity-ui</artifactId>
@@ -156,11 +314,8 @@
 			<artifactId>menu-impl</artifactId>
 			<version>${t2.ui.impl.version}</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>net.sf.taverna.t2.ui-impl</groupId>
-			<artifactId>report-impl</artifactId>
-			<version>${t2.ui.impl.version}</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-impl</groupId> <artifactId>report-impl</artifactId> 
+			<version>${t2.ui.impl.version}</version> </dependency> -->
 
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-components</groupId>
@@ -173,26 +328,13 @@
 			<version>${t2.ui.components.version}</version>
 		</dependency>
 
-		<!-- <dependency>
-			<groupId>net.sf.taverna.t2.ui-exts</groupId>
-			<artifactId>menu-items</artifactId>
-			<version>${t2.ui.exts.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.taverna.t2.ui-exts</groupId>
-			<artifactId>loop-ui</artifactId>
-			<version>${t2.ui.exts.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.taverna.t2.ui-exts</groupId>
-			<artifactId>parallelize-ui</artifactId>
-			<version>${t2.ui.exts.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.taverna.t2.ui-exts</groupId>
-			<artifactId>retry-ui</artifactId>
-			<version>${t2.ui.exts.version}</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>menu-items</artifactId> 
+			<version>${t2.ui.exts.version}</version> </dependency> <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> 
+			<artifactId>loop-ui</artifactId> <version>${t2.ui.exts.version}</version> 
+			</dependency> <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>parallelize-ui</artifactId> 
+			<version>${t2.ui.exts.version}</version> </dependency> <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> 
+			<artifactId>retry-ui</artifactId> <version>${t2.ui.exts.version}</version> 
+			</dependency> -->
 
 
 		<!-- Taverna Platform -->
@@ -303,28 +445,6 @@
 		</dependency>
 
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.3</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<descriptors>
-						<descriptor>src/main/assembly/release-assembly.xml</descriptor>
-					</descriptors>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 	<repositories>
 		<repository>
