--- a/pom.xml
+++ b/pom.xml
@@ -1,180 +1,125 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>taverna-parent</artifactId>
 		<groupId>net.sf.taverna</groupId>
+		<artifactId>taverna-parent</artifactId>
 		<version>3.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>uk.org.taverna.workbench</groupId>
 	<artifactId>taverna-workbench-product</artifactId>
-	<name>Taverna Workbench Product</name>
-	<packaging>jar</packaging>
+	<name>Taverna Workbench</name>
+	<packaging>taverna-application</packaging>
 	<profiles>
 		<profile>
 			<id>developer</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>buildnumber-maven-plugin</artifactId>
-						<version>1.0-beta-3</version>
-						<executions>
-							<execution>
-								<id>buildnumber-validate</id>
-								<phase>validate</phase>
-								<goals>
-									<goal>create</goal>
-								</goals>
-							</execution>
-						</executions>
-						<configuration>
-							<doCheck>false</doCheck>
-							<doUpdate>false</doUpdate>
-							<format>{0,date,yyyyMMdd}T{0,date,HHmm}
-							</format>
-							<items>
-								<item>timestamp</item>
-							</items>
-						</configuration>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-assembly-plugin</artifactId>
-						<version>2.3</version>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<goals>
-									<goal>single</goal>
-								</goals>
-							</execution>
-						</executions>
-
-						<configuration>
-							<descriptors>
-								<descriptor>src/main/assembly/developer-assembly.xml
-								</descriptor>
-							</descriptors>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-
+			<properties>
+				<assembly.descriptor>src/main/assembly/developer-assembly.xml</assembly.descriptor>
+			</properties>
 		</profile>
 		<profile>
 			<id>nightly</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>buildnumber-maven-plugin</artifactId>
-						<version>1.0-beta-3</version>
-						<executions>
-							<execution>
-								<id>buildnumber-validate</id>
-								<phase>validate</phase>
-								<goals>
-									<goal>create</goal>
-								</goals>
-							</execution>
-						</executions>
-						<configuration>
-							<doCheck>false</doCheck>
-							<doUpdate>false</doUpdate>
-							<format>{0,date,yyyyMMdd}
-							</format>
-							<items>
-								<item>timestamp</item>
-							</items>
-						</configuration>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-assembly-plugin</artifactId>
-						<version>2.3</version>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<goals>
-									<goal>single</goal>
-								</goals>
-							</execution>
-						</executions>
-
-						<configuration>
-							<descriptors>
-								<descriptor>src/main/assembly/nightly-assembly.xml
-								</descriptor>
-							</descriptors>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-
+			<properties>
+				<assembly.descriptor>src/main/assembly/nightly-assembly.xml</assembly.descriptor>
+			</properties>
 		</profile>
 		<profile>
 			<id>release</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>buildnumber-maven-plugin</artifactId>
-						<version>1.0-beta-3</version>
-						<executions>
-							<execution>
-								<id>buildnumber-validate</id>
-								<phase>validate</phase>
-								<goals>
-									<goal>create</goal>
-								</goals>
-							</execution>
-						</executions>
-						<configuration>
-							<doCheck>false</doCheck>
-							<doUpdate>false</doUpdate>
-							<format>{0,date,yyyyMMdd}
-							</format>
-							<items>
-								<item>timestamp</item>
-							</items>
-						</configuration>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-assembly-plugin</artifactId>
-						<version>2.3</version>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<goals>
-									<goal>single</goal>
-								</goals>
-							</execution>
-						</executions>
-
-						<configuration>
-							<descriptors>
-								<descriptor>src/main/assembly/release-assembly.xml
-								</descriptor>
-							</descriptors>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
+			<properties>
+				<assembly.descriptor>src/main/assembly/release-assembly.xml</assembly.descriptor>
+			</properties>
 		</profile>
 	</profiles>
 	<build>
 		<finalName>taverna-workbench-${project.version}</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<descriptors>
+						<descriptor>${assembly.descriptor}</descriptor>
+					</descriptors>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>buildnumber-maven-plugin</artifactId>
+				<version>1.0-beta-3</version>
+				<executions>
+					<execution>
+						<id>buildnumber-validate</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>create</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<format>{0,date,yyyyMMdd}T{0,date,HHmm}</format>
+					<items>
+						<item>timestamp</item>
+					</items>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>net.sf.taverna.t2.maven.plugins</groupId>
+				<artifactId>maven-taverna-plugin</artifactId>
+				<version>0.2.0-SNAPSHOT</version>
+				<extensions>true</extensions>
+				<configuration>
+					<buildNumber>${buildNumber}</buildNumber>
+					<!-- <updateSite>http://www.mygrid.org.uk/taverna/updates/taverna-workbench/</updateSite> -->
+					<updateSite>http://localhost/~david/taverna/updates/taverna-workbench/</updateSite>
+					<pluginSite>http://localhost/~david/taverna/plugins/taverna-workbench/</pluginSite>
+					<frameworkConfigurations>
+						<frameworkConfiguration>
+							<name>org.osgi.framework.bootdelegation</name>
+							<!-- <value>sun.*,com.sun.*,java.*,org.xml.*,org.w3c.*,apple.*,com.apple.*</value> -->
+							<value>sun.*,com.sun.*,java.*,org.w3c.*,apple.*,com.apple.*</value>
+						</frameworkConfiguration>
+						<frameworkConfiguration>
+							<name>org.osgi.framework.system.packages.extra</name>
+							<value>com.sun.org.apache.xml.internal.utils,org.apache.log4j;version=1.2.16</value>
+						</frameworkConfiguration>
+						<frameworkConfiguration>
+							<name>org.osgi.framework.storage.clean</name>
+							<value>onFirstInit</value>
+						</frameworkConfiguration>
+					</frameworkConfigurations>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<skipIfEmpty>true</skipIfEmpty>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
-
+	<distributionManagement>
+		<snapshotRepository>
+			<id>dev</id>
+			<url>file:///Users/david/Sites/taverna/updates/taverna-workbench</url>
+		</snapshotRepository>
+	</distributionManagement>
 	<dependencies>
+
 		<!-- Spring DM -->
 		<dependency>
 			<groupId>net.sourceforge.cglib</groupId>
@@ -199,7 +144,7 @@
 		</dependency>
 
 		<!-- Java Extension Implementations -->
-		<!-- <dependency> <groupId>com.sun.xml</groupId> <artifactId>com.springsource.com.sun.xml.bind</artifactId> 
+		<!-- <dependency> <groupId>com.sun.xml</groupId> <artifactId>com.springsource.com.sun.xml.bind</artifactId>
 			<version>2.2.0</version> </dependency> -->
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
@@ -253,13 +198,26 @@
 			<artifactId>xml-transformer-service</artifactId>
 			<version>${osgi.services.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.eventadmin</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.configadmin</artifactId>
+			<version>1.6.0</version>
+		</dependency>
 
 		<!-- Taverna Activities -->
-		<!-- <dependency> <groupId>net.sf.taverna.t2.activities</groupId> <artifactId>all-activities</artifactId> 
-			<version>${t2.activities.version}</version> <exclusions> <exclusion> <groupId>net.sf.taverna.t2.activities</groupId> 
+		<!-- <dependency> <groupId>net.sf.taverna.t2.activities</groupId> <artifactId>all-activities</artifactId>
+			<version>${t2.activities.version}</version> <exclusions> <exclusion> <groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>biomoby-activity</artifactId> </exclusion> </exclusions> </dependency> -->
-		<!-- <dependency> <groupId>net.sf.taverna.t2.activities</groupId> <artifactId>beanshell-activity</artifactId> 
-			<version>${t2.activities.version}</version> </dependency> -->
+		<dependency>
+			<groupId>net.sf.taverna.t2.activities</groupId>
+			<artifactId>beanshell-activity</artifactId>
+			<version>${t2.activities.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>stringconstant-activity</artifactId>
@@ -267,11 +225,14 @@
 		</dependency>
 
 		<!-- Taverna Activities UI -->
-		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-activities</groupId> <artifactId>all-activity-uis</artifactId> 
-			<version>${t2.activities.version}</version> <exclusions> <exclusion> <groupId>net.sf.taverna.t2.activities</groupId> 
+		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-activities</groupId> <artifactId>all-activity-uis</artifactId>
+			<version>${t2.activities.version}</version> <exclusions> <exclusion> <groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>biomoby-activity-ui</artifactId> </exclusion> </exclusions> </dependency> -->
-		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-activities</groupId> <artifactId>beanshell-activity-ui</artifactId> 
-			<version>${t2.ui.activities.version}</version> </dependency> -->
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-activities</groupId>
+			<artifactId>beanshell-activity-ui</artifactId>
+			<version>${t2.ui.activities.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>stringconstant-activity-ui</artifactId>
@@ -314,7 +275,22 @@
 			<artifactId>menu-impl</artifactId>
 			<version>${t2.ui.impl.version}</version>
 		</dependency>
-		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-impl</groupId> <artifactId>report-impl</artifactId> 
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-impl</groupId>
+			<artifactId>selection-impl</artifactId>
+			<version>${t2.ui.impl.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-impl</groupId>
+			<artifactId>plugin-manager</artifactId>
+			<version>${t2.ui.impl.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-impl</groupId>
+			<artifactId>update-manager</artifactId>
+			<version>2.0.1-SNAPSHOT</version>
+		</dependency>
+		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-impl</groupId> <artifactId>report-impl</artifactId>
 			<version>${t2.ui.impl.version}</version> </dependency> -->
 
 		<dependency>
@@ -324,17 +300,26 @@
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-components</groupId>
+			<artifactId>perspective-results</artifactId>
+			<version>${t2.ui.components.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-components</groupId>
 			<artifactId>contextual-views</artifactId>
 			<version>${t2.ui.components.version}</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>menu-items</artifactId> 
-			<version>${t2.ui.exts.version}</version> </dependency> <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> 
-			<artifactId>loop-ui</artifactId> <version>${t2.ui.exts.version}</version> 
-			</dependency> <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>parallelize-ui</artifactId> 
-			<version>${t2.ui.exts.version}</version> </dependency> <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> 
-			<artifactId>retry-ui</artifactId> <version>${t2.ui.exts.version}</version> 
-			</dependency> -->
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-exts</groupId>
+			<artifactId>menu-items</artifactId>
+			<version>${t2.ui.exts.version}</version>
+		</dependency>
+		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>loop-ui</artifactId>
+			<version>${t2.ui.exts.version}</version> </dependency> -->
+		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>parallelize-ui</artifactId>
+			<version>${t2.ui.exts.version}</version> </dependency> -->
+		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>retry-ui</artifactId>
+			<version>${t2.ui.exts.version}</version> </dependency> -->
 
 
 		<!-- Taverna Platform -->
@@ -345,7 +330,7 @@
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.platform</groupId>
-			<artifactId>taverna-data-impl</artifactId>
+			<artifactId>taverna-data-inmemory-impl</artifactId>
 			<version>${platform.version}</version>
 		</dependency>
 		<dependency>
@@ -379,6 +364,23 @@
 			<groupId>uk.org.taverna.configuration</groupId>
 			<artifactId>taverna-database-configuration-impl</artifactId>
 			<version>${taverna.configuration.version}</version>
+		</dependency>
+
+		<!-- Taverna Commons -->
+		<dependency>
+			<groupId>uk.org.taverna.commons</groupId>
+			<artifactId>taverna-download-impl</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>uk.org.taverna.commons</groupId>
+			<artifactId>taverna-plugin-impl</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>uk.org.taverna.commons</groupId>
+			<artifactId>taverna-update-impl</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Scufl2 -->
