--- a/pom.xml
+++ b/pom.xml
@@ -77,8 +77,8 @@
 			</plugin>
 			<plugin>
 				<groupId>net.sf.taverna.t2.maven.plugins</groupId>
-				<artifactId>maven-taverna-plugin</artifactId>
-				<version>0.2.0-SNAPSHOT</version>
+				<artifactId>taverna-maven-plugin</artifactId>
+				<version>0.3.0-SNAPSHOT</version>
 				<extensions>true</extensions>
 				<configuration>
 					<buildNumber>${buildNumber}</buildNumber>
@@ -210,9 +210,11 @@
 		</dependency>
 
 		<!-- Taverna Activities -->
-		<!-- <dependency> <groupId>net.sf.taverna.t2.activities</groupId> <artifactId>all-activities</artifactId>
-			<version>${t2.activities.version}</version> <exclusions> <exclusion> <groupId>net.sf.taverna.t2.activities</groupId>
-			<artifactId>biomoby-activity</artifactId> </exclusion> </exclusions> </dependency> -->
+		<dependency>
+			<groupId>net.sf.taverna.t2.activities</groupId>
+			<artifactId>apiconsumer-activity</artifactId>
+			<version>${t2.activities.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>beanshell-activity</artifactId>
@@ -220,7 +222,57 @@
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
+			<artifactId>biomart-activity</artifactId>
+			<version>${t2.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.activities</groupId>
+			<artifactId>dataflow-activity</artifactId>
+			<version>${t2.activities.version}</version>
+		</dependency>
+		<!-- <dependency>
+			<groupId>net.sf.taverna.t2.activities</groupId>
+			<artifactId>external-tool-activity</artifactId>
+			<version>${t2.activities.version}</version>
+		</dependency> -->
+		<dependency>
+			<groupId>net.sf.taverna.t2.activities</groupId>
+			<artifactId>localworker-activity</artifactId>
+			<version>${t2.activities.version}</version>
+		</dependency>
+		<!-- <dependency>
+			<groupId>net.sf.taverna.t2.activities</groupId>
+			<artifactId>rest-activity</artifactId>
+			<version>${t2.activities.version}</version>
+		</dependency> -->
+		<dependency>
+			<groupId>net.sf.taverna.t2.activities</groupId>
+			<artifactId>rshell-activity</artifactId>
+			<version>${t2.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.activities</groupId>
+			<artifactId>soaplab-activity</artifactId>
+			<version>${t2.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.activities</groupId>
+			<artifactId>spreadsheet-import-activity</artifactId>
+			<version>${t2.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>stringconstant-activity</artifactId>
+			<version>${t2.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.activities</groupId>
+			<artifactId>wsdl-activity</artifactId>
+			<version>${t2.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.activities</groupId>
+			<artifactId>xpath-activity</artifactId>
 			<version>${t2.activities.version}</version>
 		</dependency>
 
@@ -230,12 +282,57 @@
 			<artifactId>biomoby-activity-ui</artifactId> </exclusion> </exclusions> </dependency> -->
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
+			<artifactId>apiconsumer-activity-ui</artifactId>
+			<version>${t2.ui.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>beanshell-activity-ui</artifactId>
 			<version>${t2.ui.activities.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
+			<artifactId>biomart-activity-ui</artifactId>
+			<version>${t2.ui.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-activities</groupId>
+			<artifactId>dataflow-activity-ui</artifactId>
+			<version>${t2.ui.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-activities</groupId>
+			<artifactId>localworker-activity-ui</artifactId>
+			<version>${t2.ui.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-activities</groupId>
+			<artifactId>rshell-activity-ui</artifactId>
+			<version>${t2.ui.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-activities</groupId>
+			<artifactId>spreadsheet-import-activity-ui</artifactId>
+			<version>${t2.ui.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-activities</groupId>
+			<artifactId>soaplab-activity-ui</artifactId>
+			<version>${t2.ui.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>stringconstant-activity-ui</artifactId>
+			<version>${t2.ui.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-activities</groupId>
+			<artifactId>wsdl-activity-ui</artifactId>
+			<version>${t2.ui.activities.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-activities</groupId>
+			<artifactId>unrecognized-activity-ui</artifactId>
 			<version>${t2.ui.activities.version}</version>
 		</dependency>
 
@@ -277,7 +374,17 @@
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-impl</groupId>
+			<artifactId>renderers-impl</artifactId>
+			<version>${t2.ui.impl.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-impl</groupId>
 			<artifactId>selection-impl</artifactId>
+			<version>${t2.ui.impl.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-impl</groupId>
+			<artifactId>httpproxy-config</artifactId>
 			<version>${t2.ui.impl.version}</version>
 		</dependency>
 		<dependency>
@@ -308,16 +415,31 @@
 			<artifactId>contextual-views</artifactId>
 			<version>${t2.ui.components.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-components</groupId>
+			<artifactId>credential-manager-ui</artifactId>
+			<version>${t2.ui.components.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-components</groupId>
+			<artifactId>run-ui</artifactId>
+			<version>${t2.ui.components.version}</version>
+		</dependency>
 
 		<dependency>
+			<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>loop-ui</artifactId>
+				<version>${t2.ui.exts.version}</version> </dependency> -->
 			<groupId>net.sf.taverna.t2.ui-exts</groupId>
 			<artifactId>menu-items</artifactId>
 			<version>${t2.ui.exts.version}</version>
 		</dependency>
-		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>loop-ui</artifactId>
-			<version>${t2.ui.exts.version}</version> </dependency> -->
 		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>parallelize-ui</artifactId>
 			<version>${t2.ui.exts.version}</version> </dependency> -->
+		<!-- <dependency>
+			<groupId>net.sf.taverna.t2.ui-exts</groupId>
+			<artifactId>renderers-exts</artifactId>
+			<version>${t2.ui.exts.version}</version>
+		</dependency> -->
 		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>retry-ui</artifactId>
 			<version>${t2.ui.exts.version}</version> </dependency> -->
 
@@ -379,6 +501,11 @@
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.commons</groupId>
+			<artifactId>taverna-services-impl</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>uk.org.taverna.commons</groupId>
 			<artifactId>taverna-update-impl</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
@@ -403,6 +530,13 @@
 			<groupId>uk.org.taverna.scufl2</groupId>
 			<artifactId>scufl2-validation-correctness</artifactId>
 			<version>${scufl2.version}</version>
+		</dependency>
+
+		<!-- Data bundle -->
+		<dependency>
+			<groupId>uk.org.taverna.databundle</groupId>
+    		<artifactId>databundle</artifactId>
+    		<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Taverna Security -->
