--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,45 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+		    <plugins>
+		        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+		        <plugin>
+		            <groupId>org.eclipse.m2e</groupId>
+		            <artifactId>lifecycle-mapping</artifactId>
+		            <version>1.0.0</version>
+		            <configuration>
+		                <lifecycleMappingMetadata>
+		                    <pluginExecutions>
+		                        <pluginExecution>
+		                            <pluginExecutionFilter>
+		                                <groupId>
+		                                    net.sf.taverna.t2.maven.plugins
+		                                </groupId>
+		                                <artifactId>
+		                                    taverna-maven-plugin
+		                                </artifactId>
+		                                <versionRange>
+		                                    [0.3.1-SNAPSHOT,)
+		                                </versionRange>
+		                                <goals>
+		                                    <goal>
+		                                        profile-generate
+		                                    </goal>
+		                                </goals>
+		                            </pluginExecutionFilter>
+		                            <action>
+		                                <execute>
+                                            <runOnIncremental>false</runOnIncremental>
+                                        </execute>
+		                            </action>
+		                        </pluginExecution>
+		                    </pluginExecutions>
+		                </lifecycleMappingMetadata>
+		            </configuration>
+		        </plugin>
+		    </plugins>
+		</pluginManagement>
 	</build>
 	<distributionManagement>
 		<snapshotRepository>
@@ -126,6 +165,27 @@
 			<artifactId>com.springsource.net.sf.cglib</artifactId>
 			<version>2.1.3</version>
 		</dependency>
+
+        <!-- Explicit org.osgi.* with <scope>provided as these are also provided by
+             the felix osgi package.
+            Avoids:
+            Caused by: java.lang.SecurityException: class "org.osgi.framework.hooks.bundle.CollisionHook"'s signer information does not match signer information of other classes in the same package
+        -->
+
+        <dependency>
+          <groupId>org.osgi</groupId>
+          <artifactId>org.osgi.core</artifactId>
+          <version>4.3.1</version>
+          <scope>provided</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.osgi</groupId>
+          <artifactId>org.osgi.compendium</artifactId>
+          <version>4.2.0</version>
+          <scope>provided</scope>
+        </dependency>
+        <!--    -->
+
 		<dependency>
 			<groupId>org.springframework.osgi</groupId>
 			<artifactId>spring-osgi-annotation</artifactId>
