Added explicit slf4j versions.
git-svn-id: https://taverna.googlecode.com/svn/taverna/products/taverna-workbench-product/trunk@16056 bf327186-88b3-11dd-a302-d386e5130c1c

--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,19 @@
 	</distributionManagement>
 	<dependencies>
 
+		<!-- Workaround for slf4j api/impl version mismatch -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.6.0</version>
+			<scope>runtime</scope>
+		</dependency>
+
 		<!-- Spring DM -->
 		<dependency>
 			<groupId>net.sourceforge.cglib</groupId>
@@ -508,11 +521,6 @@
 		<dependency>
 			<groupId>uk.org.taverna.platform</groupId>
 			<artifactId>taverna-capability-impl</artifactId>
-			<version>${platform.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>uk.org.taverna.platform</groupId>
-			<artifactId>taverna-data-inmemory-impl</artifactId>
 			<version>${platform.version}</version>
 		</dependency>
 		<dependency>
