Added deployment repository for snapshots.
git-svn-id: https://taverna.googlecode.com/svn/taverna/products/taverna-workbench-product/trunk@16455 bf327186-88b3-11dd-a302-d386e5130c1c

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
 					<id>dev</id>
 					<url>file:///local/www/taverna/updates/3/workbench/3.0/dev</url>
 				</repository>
+				<snapshotRepository>
+					<id>dev</id>
+					<url>file:///local/www/taverna/updates/3/workbench/3.0/dev</url>
+				</snapshotRepository>
 			</distributionManagement>
 		</profile>
 		<profile>
@@ -41,6 +45,10 @@
 					<id>beta</id>
 					<url>file:///local/www/taverna/updates/3/workbench/3.0/beta</url>
 				</repository>
+				<snapshotRepository>
+					<id>beta</id>
+					<url>file:///local/www/taverna/updates/3/workbench/3.0/beta</url>
+				</snapshotRepository>
 			</distributionManagement>
 		</profile>
 		<profile>
@@ -55,6 +63,10 @@
 					<id>stable</id>
 					<url>file:///local/www/taverna/updates/3/workbench/3.0/stable</url>
 				</repository>
+				<snapshotRepository>
+					<id>stable</id>
+					<url>file:///local/www/taverna/updates/3/workbench/3.0/stable</url>
+				</snapshotRepository>
 			</distributionManagement>
 		</profile>
 		<profile>
@@ -69,6 +81,10 @@
 					<id>dev</id>
 					<url>file:///local/www/taverna/updates/3/workbench/3.0/dev</url>
 				</repository>
+				<snapshotRepository>
+					<id>dev</id>
+					<url>file:///local/www/taverna/updates/3/workbench/3.0/dev</url>
+				</snapshotRepository>
 			</distributionManagement>
 		</profile>
 	</profiles>
